--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5709050fbd5371af4a4ea2b6ed6517df"
+    ></script>
   </body>
 </html>
